[gd_scene load_steps=5 format=3 uid="uid://ceun5xdoedpjf"]

[ext_resource type="Script" path="res://menu/main_menu/main_menu.gd" id="1_hx8yy"]
[ext_resource type="Script" path="res://menu/main_menu/settings_panel.gd" id="2_5gwv8"]
[ext_resource type="Script" path="res://menu/main_menu/about_panel.gd" id="4_1qmbs"]
[ext_resource type="PackedScene" uid="uid://btkp0ce6d02cv" path="res://menu/muliplayer_menu/mutiplayer_menu.tscn" id="5_dwoyk"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hx8yy")

[node name="main_panel" type="Panel" parent="."]
offset_left = 784.0
offset_top = 48.0
offset_right = 1200.0
offset_bottom = 560.0

[node name="upper_menu" type="VBoxContainer" parent="main_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 384.0
offset_bottom = 133.0

[node name="multiplayer_menu" type="Button" parent="main_panel/upper_menu"]
layout_mode = 2
text = "Poor Man's Multiplayer"

[node name="settings_menu" type="VBoxContainer" parent="main_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 352.0
offset_right = 384.0
offset_bottom = 418.0

[node name="settings_menu" type="Button" parent="main_panel/settings_menu"]
layout_mode = 2
text = "Settings"

[node name="about_menu" type="Button" parent="main_panel/settings_menu"]
layout_mode = 2
text = "About"

[node name="quit_menu" type="VBoxContainer" parent="main_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 448.0
offset_right = 384.0
offset_bottom = 512.0

[node name="quit_button" type="Button" parent="main_panel/quit_menu"]
layout_mode = 2
text = "Quit"

[node name="other_menus" type="Node2D" parent="."]

[node name="MutiplayerMenu" parent="other_menus" instance=ExtResource("5_dwoyk")]
visible = false
offset_left = 144.0
offset_top = 48.0
offset_right = 144.0
offset_bottom = 48.0

[node name="about_panel" type="Panel" parent="other_menus"]
visible = false
offset_left = 112.0
offset_top = 48.0
offset_right = 720.0
offset_bottom = 624.0
script = ExtResource("4_1qmbs")

[node name="ScrollContainer" type="ScrollContainer" parent="other_menus/about_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 576.0
offset_bottom = 544.0

[node name="VBoxContainer" type="VBoxContainer" parent="other_menus/about_panel/ScrollContainer"]
layout_mode = 2

[node name="settings_panel" type="Panel" parent="other_menus"]
visible = false
offset_left = 80.0
offset_top = 80.0
offset_right = 592.0
offset_bottom = 464.0
script = ExtResource("2_5gwv8")

[node name="Label" type="Label" parent="other_menus/settings_panel"]
layout_mode = 2
offset_left = 32.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 55.0
text = "Audio Settings"

[node name="GridContainer" type="GridContainer" parent="other_menus/settings_panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 416.0
offset_bottom = 320.0
columns = 2

[node name="music_enable_label" type="Label" parent="other_menus/settings_panel/GridContainer"]
layout_mode = 2
text = "Music Enabled:"

[node name="music_enable_button" type="CheckButton" parent="other_menus/settings_panel/GridContainer"]
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="other_menus/settings_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 128.0
offset_right = 110.0
offset_bottom = 151.0
text = "Gameplay Settigs"

[node name="GridContainer2" type="GridContainer" parent="other_menus/settings_panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 160.0
offset_right = 242.0
offset_bottom = 207.0
columns = 2

[node name="Label3" type="Label" parent="other_menus/settings_panel/GridContainer2"]
layout_mode = 2
text = "Show aggression range"

[node name="agression_range_button" type="CheckButton" parent="other_menus/settings_panel/GridContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="other_menus/settings_panel/GridContainer2"]
layout_mode = 2
text = "Show attack range"

[node name="attack_range_button" type="CheckButton" parent="other_menus/settings_panel/GridContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="other_menus/settings_panel/GridContainer2"]
layout_mode = 2
text = "Show AI POI"

[node name="show_ai_poi_button" type="CheckButton" parent="other_menus/settings_panel/GridContainer2"]
layout_mode = 2

[node name="Label3" type="Label" parent="other_menus/settings_panel"]
layout_mode = 0
offset_left = 32.0
offset_top = 256.0
offset_right = 142.0
offset_bottom = 279.0
text = "Video Settings"

[node name="GridContainer3" type="GridContainer" parent="other_menus/settings_panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 288.0
offset_right = 131.0
offset_bottom = 328.0
columns = 2

[node name="Label" type="Label" parent="other_menus/settings_panel/GridContainer3"]
layout_mode = 2
text = "Weather"

[node name="show_weather" type="CheckButton" parent="other_menus/settings_panel/GridContainer3"]
layout_mode = 2
button_pressed = true

[connection signal="mouse_entered" from="main_panel/upper_menu/multiplayer_menu" to="." method="_on_multiplayer_menu_mouse_entered"]
[connection signal="pressed" from="main_panel/upper_menu/multiplayer_menu" to="." method="_on_multiplayer_menu_pressed"]
[connection signal="mouse_entered" from="main_panel/settings_menu/settings_menu" to="." method="_on_settings_menu_mouse_entered"]
[connection signal="pressed" from="main_panel/settings_menu/settings_menu" to="." method="_on_settings_menu_pressed"]
[connection signal="mouse_entered" from="main_panel/settings_menu/about_menu" to="." method="_on_about_menu_mouse_entered"]
[connection signal="pressed" from="main_panel/settings_menu/about_menu" to="." method="_on_about_menu_pressed"]
[connection signal="mouse_entered" from="main_panel/quit_menu/quit_button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="main_panel/quit_menu/quit_button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="other_menus/settings_panel/GridContainer/music_enable_button" to="other_menus/settings_panel" method="_on_music_enable_button_toggled"]
[connection signal="toggled" from="other_menus/settings_panel/GridContainer2/agression_range_button" to="other_menus/settings_panel" method="_on_agression_range_button_toggled"]
[connection signal="toggled" from="other_menus/settings_panel/GridContainer2/attack_range_button" to="other_menus/settings_panel" method="_on_attack_range_button_toggled"]
[connection signal="toggled" from="other_menus/settings_panel/GridContainer2/show_ai_poi_button" to="other_menus/settings_panel" method="_on_show_ai_poi_button_toggled"]
[connection signal="toggled" from="other_menus/settings_panel/GridContainer3/show_weather" to="other_menus/settings_panel" method="_on_show_weather_toggled"]
